# RM-UI-Designer

./: .env  .gitignore  .umirc.ts  129.async.js  143.async.js  212.async.js  232.async.js  261.async.js  275.async.js  317.async.js  39.async.js  397.async.js  405.async.js  460.async.js  461.async.js  548.async.js  571.async.js  605.async.js  626.async.js  646.async.js  661.async.js  664.async.js  670.async.js  679.async.js  757.async.js  81.async.js  866.async.js  905.async.js  924.async.js  CNAME  LICENSE  README.md  index.html  layouts__index.async.js  manifest.webmanifest  package-lock.json  package.json  rm_ui_generator.js  src__pages__index.async.js  src__pages__sim.async.js  (+9 more)
assets/: index-Bk-IjVDM.js  index-DmLNwiyg.css  ui_interface-qklbymqZ.c
doc/: directory.md
nightly/: 232.async.js  402.async.js  405.async.js  548.async.js  571.async.js  index.html  manifest.json  rm_ui_generator.js  src__pages__index.async.js  umi.css  umi.js  version
scripts/: downloadWasm.js  release.mjs  updater.mjs
serial_test/: CMakeLists.txt  main.c  main.cpp  serial.h  serialib.cpp  serialib.h  ui.h  ui_default_Ungroup_0.c  ui_default_Ungroup_0.h  ui_default_Ungroup_1.c  ui_default_Ungroup_1.h  ui_default_ungroup1.c  ui_default_ungroup1.h  ui_default_ungroup2.c  ui_default_ungroup2.h  ui_g.c  ui_g.h  ui_interface.c  ui_interface.h  ui_objects.c  ui_objects.h  ui_types.h
src/: app.ts  global.css  global.js  global.ts  loading.jsx  loading.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
static/: eula.84c08b78.md  (+8 more)
(+142 files in other folders)
