[package]
name = "rm_ui_designer"
version = "0.1.0"
description = "An Easy Way to Design UI for RM"
authors = ["bismarckkk"]
license = "GPL-3.0-only"
repository = "https://github.com/bismarckkk/RM-UI-Designer"
default-run = "rm_ui_designer"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "fs-write-file", "shell-open", "window-start-dragging", "fs-read-file", "window-set-decorations", "window-maximize", "window-minimize", "window-unmaximize", "dialog-save", "process-exit", "dialog-open"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
